force-app/main/default/objects/Financial_Account_LineItem__c/Financial_Account_LineItem__c.object-meta.xml
<CustomObject>
    <label>Financial Account LineItem</label>
    <nameField>
        <displayFormat>T-{00000000}</displayFormat>
        <label>Financial Account LineItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Account LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>