force-app/main/default/objects/Financial_Account_LineItem__c/fields/Detailed_Category__c.field-meta.xml
<CustomField>
    <fullName>Detailed_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Detailed Category</label>
    <referenceTo>Detailed_Category__c</referenceTo>
    <relationshipLabel>Financial Account LineItems</relationshipLabel>
    <relationshipName>Financial_Account_LineItems</relationshipName>
    <type>Lookup</type>
</CustomField>