force-app/main/default/objects/Financial_Account_LineItem__c/fields/old_id__c.field-meta.xml
<CustomField>
    <fullName>old_id__c</fullName>
    <externalId>true</externalId>
    <label>old id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>