force-app/main/default/objects/Financial_Account_LineItem__c/fields/Yodlee_Id__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Id__c</fullName>
    <label>Yodlee Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>