force-app/main/default/objects/Financial_Account_LineItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Description__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>Yodlee_Id__c</columns>
    <columns>Transaction_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>