force-app/main/default/objects/Financial_Account_LineItem__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Date__c</columns>
    <columns>Financial_Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Detailed_Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>